# zeroconf_avahi_suite

./: README.md  stack.xml  zeroconf.rosinstall
zeroconf_avahi/: .cproject  .project  CMakeLists.txt  manifest.xml  package.xml
zeroconf_avahi/cmake/: CMakeLists.txt  FindAvahi.cmake
zeroconf_avahi/include/zeroconf_avahi/: zeroconf.hpp
zeroconf_avahi/src/lib/: CMakeLists.txt  zeroconf.cpp
zeroconf_avahi/src/node/: CMakeLists.txt  zeroconf.cpp
zeroconf_avahi_demos/: CMakeLists.txt  mainpage.dox  package.xml
zeroconf_avahi_demos/launch/: test_params.launch
zeroconf_avahi_demos/scripts/: CMakeLists.txt
zeroconf_avahi_demos/src/: CMakeLists.txt  demo_zeroconf_api.cpp
zeroconf_avahi_suite/: CMakeLists.txt  package.xml
