<?xml version="1.0"?>
<package>
  <name>zeroconf_avahi_suite</name>
  <version>0.2.1</version>
  <description>
    Avahi implementation of zeroconf for ros.
    This originated in the zeroconf_implementations stack which was split up to avoid tangling c++ avahi 
    and java dependencies.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/zeroconf_avahi_suite</url>
  <url type="repository">https://github.com/stonier/zeroconf_avahi_suite</url>
  <url type="bugtracker">https://github.com/stonier/zeroconf_avahi_suite/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <run_depend>zeroconf_avahi</run_depend>
  <run_depend>zeroconf_avahi_demos</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>